[workspace]
resolver = "2"
default-members = ["crates/git", "crates/fs", "crates/test-utils"]
members = [
  "apps/tauri/plugins/plugin-gramax-fs",
  "apps/tauri/plugins/plugin-gramax-git",
  "apps/tauri/src-tauri",
  "crates/bugsnag",

  "apps/browser/crates/em-bindgen-macro",
  "apps/browser/crates/gramax-wasm",

  "apps/next/crates/next-gramax-git",
  "apps/next/crates/napi-async-macro",

  "crates/warp-spa",
]

[workspace.package]
version = "0.0.0"
authors = ["gram.ax"]
description = "Gramax"
edition = "2021"

[workspace.dependencies]
tauri-plugin = { version = "^2.0.0", features = ["build"] }
tauri-build = { version = "^2.0.0", features = ["tauri-codegen", "codegen"] }
tauri = { version = "^2.0.0", features = [
  "macos-private-api",
  "devtools",
  "image-png",
] }

tauri-plugin-deep-link = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-log = "^2.0.0"
tauri-plugin-updater = { version = "^2.0.0", features = ["zip"] }
tauri-plugin-shell = "^2.0.0"
tauri-plugin-window-state = "^2.0.0"

serde = { version = "^1.0", features = ["derive"] }
serde_yml = "^0.0"
serde_json = "^1.0"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
log = "^0.4"

rstest = "^0.23"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = 2

[profile.development]
inherits = "release"
incremental = false
lto = false
codegen-units = 256
opt-level = 1
debug = "full"
debug-assertions = false
