[package]
name = "bugsnag"
edition = "2021"

[dependencies]
backtrace = "^0.3"
os_info = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "^0.4", default-features = false, features = ["now"] }

tracing = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
machine-uid = "^0.5"
sysinfo = { workspace = true }
