[package]
name = "gramax-fs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
name = "gramaxfs"
crate-type = ["staticlib", "rlib"]

[dependencies]
copy_dir = "0.1.3"
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
