[package]
name = "spa"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { version = "^0.8", features = ["macros"] }
axum-extra = { version = "^0.10", features = ["cookie"] }
tower-http = { version = "^0.6", features = ["fs", "trace"] }
axum-client-ip = "1.1.3"
tower = "0.5.2"
chrono = { version = "0.4.41", default-features = false, features = [
  "now",
  "serde",
] }
clap = { version = "4.5.41", default-features = false, features = [
  "env",
  "help",
  "usage",
  "derive",
  "std",
] }
elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = [
  "rustls-tls",
] }
nanoid = { workspace = true }
tokio = { version = "1.46.1", features = [
  "rt-multi-thread",
  "tokio-macros",
  "signal",
] }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

woothee = "0.13.0"
reqwest = { version = "0.12.11", default-features = false, features = [
  "stream",
  "json",
  "rustls-tls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
