[package]
name = "spa"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { version = "^0.8", features = ["macros"] }
axum-client-ip = "1.1.3"
axum-extra = { version = "^0.12", features = ["cookie"] }
clap = { version = "4.5.41", default-features = false, features = [
  "derive",
  "env",
  "help",
  "std",
  "suggestions",
  "usage",
] }
elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = [
  "rustls-tls",
] }
nanoid = { workspace = true }
prometheus-client = "0.24.0"
rayon = "1.11.0"
reqwest = { version = "0.12.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { version = "0.37", default-features = false, features = [
  "multithread",
  "system",
  "user"
] }
tempdir = "0.3.7"
thiserror = { workspace = true }
time = { version = "0.3.44", features = ["parsing", "serde"] }
tokio = { version = "1.46.1", features = [   "rt-multi-thread",
  "signal",
  "tokio-macros",
] }
tower = "0.5.2"
tower-http = { version = "^0.6", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
woothee = "0.13.0"

[dev-dependencies]
assert2 = "0.3.16"
bytes = "1.10.1"
ctor = "0.2"
minio = { version = "0.3.0", features = ["rustls-tls"] }
rstest = { workspace = true }
testcontainers = "0.25.0"
