[package]
name = "test-utils"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
gramax-git = { path = "../git", optional = true }
tracing = { workspace = true }
rstest = "0.23.0"
tempfile = "3"
colored = { workspace = true }

[features]
git = ["gramax-git"]
