[package]
name = "gramax-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
gramax-git = { path = "../../../rlibs/git" }
gramax-fs = { path = "../../../rlibs/fs" }
serde = { workspace = true }
serde_json = "1.0.114"
simple_logger = { version = "5.0.0", default-features = false }
log = "0.4.21"
