[package]
name = "gramax-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
gramax-git = { path = "../../../crates/git", features = ["blocking-cache"] }
gramax-fs = { path = "../../../crates/fs" }
serde = { workspace = true }
serde_json = { workspace = true }
simple_logger = { version = "5.0.0", default-features = false }
log = "0.4.21"
threadpool = "1.8.1"
