[package]
name = "gramax"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }

[lib]
name = "gramax"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-shell = { workspace = true }

plugin-gramax-fs = { path = "../plugins/plugin-gramax-fs" }
plugin-gramax-git = { path = "../plugins/plugin-gramax-git" }
bugsnag = { path = "../../../crates/bugsnag" }

dotenvy = "0.15.7"
tiny_http = "0.12.0"
serde_json = { workspace = true }
serde = { workspace = true }
url = "2.4.0"
os_info = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "local-time",
  "json",
] }
semver = { version = "1.0.18", features = ["serde"] }
strum = { version = "0.27.0", features = ["derive"] }
rust-i18n = "3.0.1"
sys-locale = "0.3.1"
reqwest = { workspace = true }
anyhow = "^1.0"
copy_dir = "0.1.3"
nanoid = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
] }
tar = "^0.4.44"
lzma-rs = "^0.3.0"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-updater = { workspace = true }
rfd = { version = "^0.14", default-features = false, features = ["gtk3"] }
trash = "5.1.0"


tokio = { version = "1.32.0", features = ["time"] }
open = "5.0.0"

[target.'cfg(target_family = "unix")'.dependencies]
rlimit = "0.10.2"

[target.'cfg(target_os = "android")'.dependencies]
android-intent = { git = "https://github.com/pashokitsme/android-intent.git" }

[target.'cfg(target_os = "ios")'.dependencies]
cacao = { version = "0.3.2", default-features = false, features = ["uikit"] }


[target.'cfg(target_os = "macos")'.dependencies]
objc2-web-kit = "0.3.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
rstest = { version = "^0.22", default-features = false }
