[package]
name = "em-bindgen-macro"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", default-features = false, features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
convert_case = "0.8.0"
