[package]
name = "gramax-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
gramax-git = { path = "../../../../crates/git" }
gramax-fs = { path = "../../../../crates/fs" }
em-bindgen-macro = { path = "../em-bindgen-macro" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
chrono = { workspace = true, default-features = false, features = [
  "alloc",
  "std",
] }
threadpool = "1.8.1"
