[package]
name = "napi-async-macro"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = ["full", "extra-traits"] }
quote = "^1.0"
proc-macro2 = "^1.0"
