[package]
name = "next-gramax-git"
version = "0.0.0"
edition = "2021"
exclude = ["gramax-git.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gramax-git = { path = "../../../../crates/git" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

napi = { version = "^2.16", default-features = false, features = ["napi4", "async"] }
napi-derive = "^2.12"
napi-async-macro = { path = "../napi-async-macro" }

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
napi-build = "^2.1"
