[package]
name = "next-gramax-git"
version = "0.0.0"
edition = "2021"
exclude = ["gramax-git.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gramax-git = { path = "../../../../crates/git" }
gramax-opentelemetry = { path = "../../../../crates/opentelemetry" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

napi = { version = "^3.8.3", default-features = false, features = [
  "napi4",
  "async",
] }
napi-derive = "^3.5.2"
napi-async-macro = { path = "../napi-async-macro" }

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
napi-build = "^2.3.1"
