[package]
name = "next_gramax_git"
version = "0.0.0"
edition = "2021"
exclude = ["gramax-git.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gramax-git = { path = "../../../../rlibs/git" }
env_logger = "0.11.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
napi-build = "2.0.1"
