[package]
name = "plugin-gramax-fs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
links = "plugin-gramax-fs"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gramax-fs = { path = "../../../../crates/fs" }

urlencoding = "^2.1"

[build-dependencies]
tauri-plugin = { workspace = true }
