[package]
name = "plugin-gramax-git"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "plugin-gramax-git"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
gramax-git = { path = "../../../../rlibs/git" }
serde = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4.20"
