[package]
name = "plugin-gramax-git"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
links = "plugin-gramax-git"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
gramax-git = { path = "../../../../rlibs/git" }

[build-dependencies]
tauri-plugin = { workspace = true }
