[package]
name = "plugin-gramax-git"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
links = "plugin-gramax-git"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gramax-git = { path = "../../../../crates/git" }

[build-dependencies]
tauri-plugin = { workspace = true }
